refactor item aspects